--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     -->
   <title>Nick Falcone</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="animations.css" rel="stylesheet">
+  <link href="http://www.justinaguilar.com/animations/css/animations.css" rel="stylesheet">
 </head>
 
 <body>
