--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         ga('send', 'pageview');
       
       </script>
-  <title>Nick Falcone</title>
+  <title>IhaveXminutes</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="http://www.justinaguilar.com/animations/css/animations.css" rel="stylesheet">
   
